separated files into folders. started coding

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>Simon</h1>
+    <div id="main">
+        <div class="button" id="red"></div>
+        <div class="button" id="yellow"></div>
+        <div class="button" id="blue"></div>
+        <div class="button" id="green"></div>
+    </div>
+    <button id="starter">Play Game</button>
+    <p></p>
+    <script src="js/script.js"></script>
 </body>
 </html>
