--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marty UNIT 1 Project</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Simon</h1>
-    <div id="main">
-        <div class="button" id="red"></div>
-        <div class="button" id="yellow"></div>
-        <div class="button" id="blue"></div>
-        <div class="button" id="green"></div>
+    <div id="game-border">
+        <div id="game-main">
+            <h1>Simon</h1>
+            <div id="board">
+                <div class="button" id="red"></div>
+                <div class="button" id="yellow"></div>
+                <div class="button" id="blue"></div>
+                <div class="button" id="green"></div>
+            </div>
+            <button id="starter">Play Game</button>
+            <p></p>
+        </div>
     </div>
-    <button id="starter">Play Game</button>
-    <p></p>
     <script src="js/script.js"></script>
 </body>
+
 </html>
