game-board set for initial state

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div id="game-border">
         <div id="game-main">
-            <h1>Simon</h1>
+            <h1>SIMON</h1>
             <div id="board">
                 <div class="button" id="red"></div>
                 <div class="button" id="yellow"></div>
                 <div class="button" id="blue"></div>
                 <div class="button" id="green"></div>
             </div>
-            <button id="starter">Play Game</button>
+            <button id="starter">PLAY GAME</button>
             <p></p>
         </div>
     </div>
