game ready to play. colours flash when player clicks

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             </div>
             <button id="start-button">PLAY GAME</button>
             
-            <p id="instructions">The player has to memorize the sequence of randomly generated colours by the Simon game, and reproduce it
-                in the right order. The aim is to reproduce the longest series of colours/sounds using your memory and
-                attention. In each round, another colour is generated and added to the sequence. The difficulty
-                increases as the game progresses, as the player's memory is increasingly challenged.
+            <p id="instructions">The player has to memorize the sequence of randomly generated colours by the Simon game, and reproduce it in the right order. The aim is to reproduce the longest series of colours/sounds using your memory and attention. In each round, another colour is generated and added to the sequence. The difficulty increases as the game progresses, as the player's memory is increasingly challenged.
             </p>
         </div>
     </div>
